# bermuda

./: .DEV.swo  .DEV.swp  .buildconfig  .dockerignore  .gitignore  Cargo.toml  DEV  Dockerfile  ENV.sh  README.md  design-plan.md  development.md  development.md~  startup.sh
api/: Cargo.toml
api/src/: main.rs
api/src/controller/: document.rs  folder.rs  login.rs  mod.rs  profile.rs  user.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: nginx.conf
client/src/app/admin/: admin.module.ts  routing.module.ts
client/src/app/admin/document/document-detail/: document-detail.component.html  document-detail.component.ts
client/src/app/admin/folder/: folder.component.html  folder.component.ts
client/src/app/login/login/: login.component.html
core-lib/: Cargo.toml  development.html  development.md
core-lib/docs/: #models.md#  .#models.md  models.md
core-lib/src/: catalog.rs  doc.rs  files.rs  folder.rs  lib.rs
core/src/: lib.rs
core/src/model/: document.rs  folder.rs  mod.rs  user.rs
core/src/model/history/folder/: folder0.rs
core/src/model/version/document/: mod.rs  v1.rs  v2.rs
core/src/model/version/folder/: v1.rs  v2.rs
core/src/model/version/user/: mod.rs  v1.rs
src/: files.rs  main.rs
web/: Cargo.toml  index.html
web/assets/: file_upload.css  file_upload.js
web/src/: #main.rs#  main.rs  views.rs  widgets.rs
web/src/templates/: base.html
web/src/widgets/: demo_widget.rs  mod.rs  view_about.rs  view_document.rs  view_documents.rs  view_index.rs  view_new_document.rs  widget_demo.rs  widget_navbar.rs
(+10 files in other folders)
