[package]
name = "web"
version = "0.1.2"
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
license = "GPL"
homepage = "https://github.com/mezeipetister/bermuda/"
repository = "https://github.com/mezeipetister/bermuda/"

[dependencies]
rocket = "*"
rocket_codegen = "*"
time = "*"
core_lib = { path = "../core-lib"}
tera = "*"
includedir = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]

[package.metadata.deb]
maintainer = "Peter Mezei <mezeipetister@gmail.com>"
copyright = "2019, Peter Mezei <mezeipetister@gmail.com>"
extended-description = """\
Demo WEB server"""
depends = "$auto"
section = "utility"
priority = "optional"